tests/fixtures/errors/invalid_group_else_without_alt.puml
@startuml
participant A
participant B
group label
  A -> B : ping
else not-allowed
  B -> A : pong
end
@enduml
